# lotion-rs

./: .gitignore  LICENSE  README.md  RELEASE_NOTES_v0.2.4.md  SECURITY.md
.github/workflows/: build-and-release.yml  build.yml  ci.yml  integrity.yml  release.yml  test.yml
docs/: DECISIONS.md  MANIFESTO.md  ROADMAP_RUST.md
src-tauri/: Cargo.toml  lotion-rs-signer.key.pub  tauri.conf.json
src-tauri/assets/: index.html  lotion.desktop
src-tauri/src/: config.rs  i18n.rs  lib.rs  main.rs  menu.rs  policy.rs  security.rs  spellcheck.rs  state.rs  stress_test.rs  tab_controller.rs  tab_manager.rs  theming.rs  traits.rs  window_controller.rs
src-tauri/src/litebox/: blb1.rs  fd.rs  host.rs  linux.rs  litebox_core.rs  mod.rs  platform.rs  sync.rs
src-tauri/src/ui/: mod.rs  tab_bar.rs  theme.rs  theming.rs
