[package]
name = "lotion-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
log = "0.4"
env_logger = "0.10"
zstd = "0.13"
byteorder = "1.5"
tauri = { version = "2.0", features = ["macos-private-api"] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4"] }
iced = { version = "0.12", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
url = "2.5"
opener = "0.7"
